Z-INDEX FIXED !!! :o))))) nav is secure

--- a/frontend/sass/style.scss
+++ b/frontend/sass/style.scss
@@ -81,6 +81,7 @@ label {
   background-color: $primaryBlack;
   width: 100%;
   position: fixed;
+  z-index: 10;
 }
 
 #addPostBtn {
@@ -97,6 +98,7 @@ label {
 
 .wrapper {
   position: fixed;
+  z-index: 10;
   top: 0;
   left: 0;
   height: 100%;
@@ -127,7 +129,7 @@ label {
   position: fixed;
   right: 20px;
   top: 15px;
-  z-index: 2;
+  z-index: 20;
   text-align: center;
   line-height: 50px;
   height: 50px;
@@ -204,8 +206,8 @@ label {
 
 // Post Cards
 
-.card {
-  z-index: -99;
+.card-body {
+  z-index: 1;
   background-color: $primaryBlack;
 }
 
